--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <name>udp-multicast-client</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+  
+  	<dependency>
+	    <groupId>io.netty</groupId>
+	    <artifactId>netty-all</artifactId>
+	    <version>4.1.19.Final</version>
+	</dependency>
+	
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
